--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -10,4 +10,6 @@
     --siteBlue:#3D45FF;
     --sitePurple:#8A2EFF;
     --darkBg:#060011;
+    --pad-top-full:8%;
+    --pad-bot-full:8%;
 }
